<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/backg"
    android:paddingStart="15dp"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/menu_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/alice"
        android:text="@string/your_greenhouse_s_guardian"
        android:textColor="#000000"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menu_slogan"
        android:fontFamily="@font/calistoga"
        android:text="@string/eco_green"
        android:textColor="#000000"
        android:textSize="22sp" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/plant"
        android:layout_above="@+id/app_name"
        android:contentDescription="@string/image_view" />

</RelativeLayout>