<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#E2D3AB"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="355dp"
        android:layout_height="365dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/image_view" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="400dp"
        android:layout_height="76dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/calistoga"
        android:text="@string/eco_green"
        android:textAlignment="center"
        android:textColor="#2C615C"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="349dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alice"
        android:text="@string/greenhouse_monitoring_and_controlling_app"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/textView"
        app:layout_constraintEnd_toEndOf="@id/textView"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>