<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard"
    android:id="@+id/drawer_layout"
    android:background="@color/white">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_centerVertical="true"
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:src="@drawable/menu"
                android:padding="6dp"
                android:background="@drawable/back2"
                android:contentDescription="@string/image_view">
            </ImageView>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calistoga"
                        android:text="@string/eco_green2"
                        android:textSize="24sp"
                        android:layout_centerHorizontal="true">
                    </TextView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:gravity="center_vertical"
                        android:src="@drawable/plant"
                        android:contentDescription="@string/image_view">
                    </ImageView>

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    app:cardCornerRadius="30dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="20dp">

                            <TextView
                                android:id="@+id/temp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:fontFamily="@font/calistoga"
                                android:textStyle="italic"
                                android:textColor="@color/red"
                                android:text="@string/temperature_c"/>

                        </RelativeLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="30dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp">

                            <TextView
                                android:id="@+id/humid"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:fontFamily="@font/calistoga"
                                android:textStyle="italic"
                                android:textColor="@color/blue"
                                android:text="@string/humidity"/>

                        </RelativeLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="30dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="50dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp">

                            <TextView
                                android:id="@+id/moist"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:fontFamily="@font/calistoga"
                                android:textStyle="italic"
                                android:textColor="@color/brown"
                                android:text="@string/soil_moisture"/>

                        </RelativeLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>